fixed missing font styles, fixed dividers text wrapping

--- a/view/frontend/web/js/checkout/src/components/Braintree/DropIn/NewMethods/styles.scss
+++ b/view/frontend/web/js/checkout/src/components/Braintree/DropIn/NewMethods/styles.scss
@@ -72,7 +72,7 @@
     padding: 4px 4px 4px 0;
 
     &:hover .braintree-option__label {
-      font-weight: var(--font-weight__regular);
+      font-weight: var(--font-weight__medium);
     }
 
     &:before {
