--- a/view/frontend/web/js/checkout/src/components/Steps/PaymentPage/PenniesComponent/styles.scss
+++ b/view/frontend/web/js/checkout/src/components/Steps/PaymentPage/PenniesComponent/styles.scss
@@ -62,7 +62,7 @@
 
   &__subtitle {
     font-size: 11px;
-    font-weight: var(--font-weight__regular);
+    font-weight: var(--font-weight__medium);
     padding: 0 var(--indent__s);
     line-height: 20px;
 
